修改日志中solr collection状态检测失败问题